layout bug fix

--- a/eureka-dashboard/src/main/resources/dashboard.css
+++ b/eureka-dashboard/src/main/resources/dashboard.css
@@ -1,6 +1,7 @@
 body {
   min-height: 2000px;
   padding-top: 70px;
+  min-width: 1770px;
 }
 
 .container {
